crates/ir/tests/ir/snapshots/main__ir__lower__hkt__partial_apply_functor.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module hkt__partial_apply_functor

type Result[x10, y10] = Ok#0(y10) | Err#1(x10)
trait Functor[p11] { fmap(p11[q11], (q11) -> r11): p11[r11] }
instance hkt__partial_apply_functor.Functor[Result$$Var0$$Var1] { fmap=Functor$$Result$$Var0$$Var1$$fmap }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn double_ok(v0: Result[String, Int]) -> Result[String, Int] =
  let v4: (Int) -> Int = make_closure(lambda$32, [])
  let v1: Dict[hkt__partial_apply_functor.Functor, Result[String]] = get_dict hkt__partial_apply_functor.Functor[Result[String]]
  let v5: Result[String, Int] = trait_call hkt__partial_apply_functor.Functor.fmap(v1, v0, v4)
  v5

fn Functor$$Result$$Var0$$Var1$$fmap(v6: Result[n12, o12], v7: (o12) -> q12) -> Result[n12, q12] =
  switch v6 {
    0 (v8: o12) ->
      let v9: q12 = call_closure v7(v8)
      let v10: Result[n12, q12] = construct Result::Ok#0(v9)
      v10
    1 (v11: n12) ->
      let v12: Result[n12, q12] = construct Result::Err#1(v11)
      v12
  }

fn lambda$32(v2: Int) -> Int =
  let v3: Int = mul_int(v2, 2)
  v3
