crates/ir/tests/ir/snapshots/main__ir__lower__hkt__partial_apply_non_last.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module hkt__partial_apply_non_last

struct Predicate[x10, y10] { check: (x10) -> y10 }
trait Contravariant[p11] { contramap(p11[q11], (r11) -> q11): p11[r11] }
instance hkt__partial_apply_non_last.Contravariant[Predicate$$Var0$$Var1] { contramap=Contravariant$$Predicate$$Var0$$Var1$$contramap }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn Contravariant$$Predicate$$Var0$$Var1$$contramap(v0: Predicate[e12, e12], v1: (e12) -> e12) -> Predicate[e12, e12] =
  let v8: (e12) -> e12 = make_closure(lambda$31, [v0, v1])
  let v9: Predicate[e12, e12] = construct Predicate(v8)
  v9

fn lambda$31(v2: Predicate[e12, e12], v3: (e12) -> e12, v4: e12) -> e12 =
  let v5: (e12) -> e12 = project v2.0
  let v6: e12 = call_closure v3(v4)
  let v7: e12 = call_closure v5(v6)
  v7
