crates/ir/tests/ir/snapshots/main__ir__lower__hkt__partial_apply_result.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module hkt__partial_apply_result

type Result[x10, y10] = Ok#0(y10) | Err#1(x10)
trait Functor[p11] { fmap(p11[q11], (q11) -> r11): p11[r11] }
instance hkt__partial_apply_result.Functor[Result$$Var0$$Var1] { fmap=Functor$$Result$$Var0$$Var1$$fmap }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn Functor$$Result$$Var0$$Var1$$fmap(v0: Result[g12, h12], v1: (h12) -> j12) -> Result[g12, j12] =
  switch v0 {
    0 (v2: h12) ->
      let v3: j12 = call_closure v1(v2)
      let v4: Result[g12, j12] = construct Result::Ok#0(v3)
      v4
    1 (v5: g12) ->
      let v6: Result[g12, j12] = construct Result::Err#1(v5)
      v6
  }
