crates/ir/tests/ir/snapshots/main__ir__lower__hkt__partial_apply_run.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module hkt__partial_apply_run

type Result[x10, y10] = Ok#0(y10) | Err#1(x10)
trait Fmap[p11] { fmap(p11[q11], (q11) -> r11): p11[r11] }
instance hkt__partial_apply_run.Fmap[Result$$Var0$$Var1] { fmap=Fmap$$Result$$Var0$$Var1$$fmap }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/map/builder as builder() -> ~MapBuilder[i9, j9]
import core/map/put as put(Map[s9, t9], s9, t9) -> Map[s9, t9]
import core/map/put as put(~MapBuilder[c10, d10], c10, d10) -> ~MapBuilder[c10, d10]
import core/map/freeze as freeze(~MapBuilder[l10, m10]) -> Map[l10, m10]
declare builder: () -> ~MapBuilder[i9, j9]
declare freeze: (~MapBuilder[l10, m10]) -> Map[l10, m10]
declare println: (g) -> Unit
declare put: (~MapBuilder[c10, d10], c10, d10) -> ~MapBuilder[c10, d10]

fn build_map() -> Map[String, Int] =
  let v0: ~MapBuilder[v11, w11] = call builder()
  let v2: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v3: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v1: ~MapBuilder[String, Int] = call put(v2, v3, v0, "a", 3)
  let v5: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v6: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v4: ~MapBuilder[String, Int] = call put(v5, v6, v1, "b", 5)
  let v8: Dict[core/eq.Eq, String] = get_dict core/eq.Eq[String]
  let v9: Dict[core/hash.Hash, String] = get_dict core/hash.Hash[String]
  let v7: ~MapBuilder[String, Int] = call put(v8, v9, v4, "c", 7)
  let v10: Map[String, Int] = call freeze(v7)
  v10

fn main() -> Unit =
  let v11: Map[String, Int] = call build_map()
  let v15: (Int, Int) -> Int = make_closure(lambda$37, [])
  let v16: Dict[core/foldable.Foldable, Map[String]] = get_dict core/foldable.Foldable[Map[String]]
  let v17: Int = trait_call core/foldable.Foldable.fold(v16, v11, 0, v15)
  let v18: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v19: Unit = call println(v18, v17)
  let v20: Result[String, Int] = construct Result::Ok#0(3)
  let v23: (Int) -> Int = make_closure(lambda$38, [])
  let v24: Dict[hkt__partial_apply_run.Fmap, Result[String]] = get_dict hkt__partial_apply_run.Fmap[Result[String]]
  let v25: Result[String, Int] = trait_call hkt__partial_apply_run.Fmap.fmap(v24, v20, v23)
  switch v25 {
    0 (v26: Int) ->
      let v27: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v28: Unit = call println(v27, v26)
      v28
    1 (v29: x10) ->
      let v31: Int = neg_int(1)
      let v30: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v32: Unit = call println(v30, v31)
      v32
  }

fn Fmap$$Result$$Var0$$Var1$$fmap(v33: Result[b14, c14], v34: (c14) -> e14) -> Result[b14, e14] =
  switch v33 {
    0 (v35: c14) ->
      let v36: e14 = call_closure v34(v35)
      let v37: Result[b14, e14] = construct Result::Ok#0(v36)
      v37
    1 (v38: b14) ->
      let v39: Result[b14, e14] = construct Result::Err#1(v38)
      v39
  }

fn lambda$37(v12: Int, v13: Int) -> Int =
  let v14: Int = add_int(v12, v13)
  v14

fn lambda$38(v21: Int) -> Int =
  let v22: Int = add_int(v21, 5)
  v22
